GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/S3_BeNe_Business_Premier_Tariff_Codes__c.field-meta.xml
<CustomField>
    <fullName>S3_BeNe_Business_Premier_Tariff_Codes__c</fullName>
    <label>S3 &amp; BeNe Business Premier Tariff Codes</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Percentage_Discount_Business_Premier_PL__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>A01C06ARAE - A01C06ARAG - A01C06ASAE - A01C06ASAG</fullName>
            </value>
            <value>
                <fullName>A01C06ARBE - A01C06ARBG - A01C06ASBE - A01C06ASBG</fullName>
            </value>
            <value>
                <fullName>A01C08ARAE - A01C08ARAG - A01C08ASAE - A01C08ASAG</fullName>
            </value>
            <value>
                <fullName>A01C08ARBE - A01C08ARBG - A01C08ASBE - A01C08ASBG</fullName>
            </value>
            <value>
                <fullName>A01C09ARAE - A01C09ARAG - A01C09ASAE - A01C09ASAG</fullName>
            </value>
            <value>
                <fullName>A01C09ARBE - A01C09ARBG - A01C09ASBE - A01C09ASBG</fullName>
            </value>
            <value>
                <fullName>A01C10ARAE - A01C10ARAG - A01C10ASAE - A01C10ASAG</fullName>
            </value>
            <value>
                <fullName>A01C10ARBE - A01C10ARBG - A01C10ASBE - A01C10ASBG</fullName>
            </value>
            <value>
                <fullName>A01C11ARAE - A01C11ARAG - A01C11ASAE - A01C11ASAG</fullName>
            </value>
            <value>
                <fullName>A01C11ARBE - A01C11ARBG - A01C11ASBE - A01C11ASBG</fullName>
            </value>
            <value>
                <fullName>A01C12ARAE - A01C12ARAG - A01C12ASAE - A01C12ASAG</fullName>
            </value>
            <value>
                <fullName>A01C12ARBE -  A01C12ARBG -  A01C12ASBE -  A01C12ASBG</fullName>
            </value>
            <value>
                <fullName>A01C13ARAE - A01C13ARAG - A01C13ASAE - A01C13ASAG</fullName>
            </value>
            <value>
                <fullName>A01C13ARBE - A01C13ARBG - A01C13ASBE - A01C13ASBG</fullName>
            </value>
            <value>
                <fullName>A01C14ARAE - A01C14ARAG - A01C14ASAE - A01C14ASAG</fullName>
            </value>
            <value>
                <fullName>A01C14ARBE - A01C14ARBG - A01C14ASBE - A01C14ASBG</fullName>
            </value>
            <value>
                <fullName>A01C15ARAE - A01C15ARAG - A01C15ASAE - A01C15ASAG</fullName>
            </value>
            <value>
                <fullName>A01C15ARBE - A01C15ARBG - A01C15ASBE - A01C15ASBG</fullName>
            </value>
            <value>
                <fullName>A01C16ARAE - A01C16ARAG - A01C16ASAE - A01C16ASAG</fullName>
            </value>
            <value>
                <fullName>A01C16ARBE - A01C16ARBG - A01C16ASBE - A01C16ASBG</fullName>
            </value>
            <value>
                <fullName>A01C17ARAE - A01C17ARAG - A01C17ASAE - A01C17ASAG</fullName>
            </value>
            <value>
                <fullName>A01C17ARBE - A01C17ARBG - A01C17ASBE - A01C17ASBG</fullName>
            </value>
            <value>
                <fullName>A01C18ARAE - A01C18ARAG - A01C18ASAE - A01C18ASAG</fullName>
            </value>
            <value>
                <fullName>A01C18ARBE - A01C18ARBG - A01C18ASBE - A01C18ASBG</fullName>
            </value>
            <value>
                <fullName>A01C19ARAE - A01C19ARAG - A01C19ASAE - A01C19ASAG</fullName>
            </value>
            <value>
                <fullName>A01C19ARBE - A01C19ARBG - A01C19ASBE - A01C19ASBG</fullName>
            </value>
            <value>
                <fullName>A01C20ARAE - A01C20ARAG - A01C20ASAE - A01C20ASAG</fullName>
            </value>
            <value>
                <fullName>A01C20ARBE - A01C20ARBG - A01C20ASBE - A01C20ASBG</fullName>
            </value>
            <value>
                <fullName>A01C21ARAE - A01C21ARAG - A01C21ASAE - A01C21ASAG</fullName>
            </value>
            <value>
                <fullName>A01C21ARBE - A01C21ARBG - A01C21ASBE - A01C21ASBG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>