GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/S3_BeNe_EStandard_Tariff_Codes__c.field-meta.xml
<CustomField>
    <fullName>S3_BeNe_EStandard_Tariff_Codes__c</fullName>
    <label>S3 BeNe E.Standard Tariff Codes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>