GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/fields/S3_BeNe_Standard_Premier_Tariff_Codes__c.field-meta.xml
<CustomField>
    <fullName>S3_BeNe_Standard_Premier_Tariff_Codes__c</fullName>
    <label>S3 &amp; BeNe Standard Premier Tariff Codes</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Percentage_Discount_Standard_Premier_PL__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>H01C03ARBE - H01C03ARBG - H01C03ASBE - H01C03ASBG - H03C03ARBE - H03C03ARBG - H03C03ASBE - H03C03ASBG</fullName>
            </value>
            <value>
                <fullName>H01C04ARBE - H01C04ARBG - H01C04ASBE - H01C04ASBG - H03C04ARBE - H03C04ARBG - H03C04ASBE - H03C04ASBG</fullName>
            </value>
            <value>
                <fullName>H01C05ARBE - H01C05ARBG - H01C05ASBE - H01C05ASBG - H03C05ARBE - H03C05ARBG - H03C05ASBE - H03C05ASBG</fullName>
            </value>
            <value>
                <fullName>H01C03ARAE - H01C03ARAG - H01C03ASAE - H01C03ASAG - H03C03ARAE - H03C03ARAG - H03C03ASAE - H03C03ASAG</fullName>
            </value>
            <value>
                <fullName>H01C04ARAE - H01C04ARAG - H01C04ASAE - H01C04ASAG - H03C04ARAE - H03C04ARAG - H03C04ASAE - H03C04ASAG</fullName>
            </value>
            <value>
                <fullName>H01C05ARAE - H01C05ARAG - H01C05ASAE - H01C05ASAG - H03C05ARAE - H03C05ARAG - H03C05ASAE - H03C05ASAG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>