GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/recordTypes/Negotiated_Rate_NCO.recordType-meta.xml
<RecordType>
    <fullName>Negotiated_Rate_NCO</fullName>
    <active>true</active>
    <label>Negotiated Rate NCO</label>
</RecordType>