GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/validationRules/B2b_Block_NRD_New_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>B2b_Block_NRD_New_Status</fullName>
    <active>true</active>
    <description>New Negotiated Rate must have status to NEW.</description>
    <errorConditionFormula>AND(
NOT($User.B2b_Bypass_Validation_Rules__c),
NOT($Permission.Sales_Admin),
ISNEW(),
!ISPICKVAL(B2b_Status__c, &#39;New&#39;),
ISBLANK(B2b_ParentNrDetail__c)
)</errorConditionFormula>
    <errorDisplayField>B2b_Status__c</errorDisplayField>
    <errorMessage>New Negotiated Rate must have status to NEW.</errorMessage>
</ValidationRule>