GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/validationRules/B2b_BlockPercentageForClass.validationRule-meta.xml
<ValidationRule>
    <fullName>B2b_BlockPercentageForClass</fullName>
    <active>false</active>
    <description>Block some percentage for some class.</description>
    <errorConditionFormula>AND(
NOT($User.B2b_Bypass_Validation_Rules__c),
NOT($Permission.Sales_Admin),
OR(
OR(
CONTAINS(TEXT(B2b_Percentage_Discount_Premium__c), &#39;9&#39;),
CONTAINS(TEXT(B2b_Percentage_Discount_Premium__c), &#39;11&#39;),
CONTAINS(TEXT(B2b_Percentage_Discount_Premium__c), &#39;13&#39;),
CONTAINS(TEXT(B2b_Percentage_Discount_Premium__c), &#39;21&#39;),
CONTAINS(TEXT(B2b_Percentage_Discount_Premium__c), &#39;22&#39;),
CONTAINS(TEXT(B2b_Percentage_Discount_Premium__c), &#39;23&#39;)
),
OR(
CONTAINS(TEXT(B2b_Percentage_Discount_Comfort__c), &#39;9&#39;),
CONTAINS(TEXT(B2b_Percentage_Discount_Comfort__c), &#39;11&#39;),
CONTAINS(TEXT(B2b_Percentage_Discount_Comfort__c), &#39;13&#39;)
),
OR(
CONTAINS(TEXT(B2b_Percentage_Discount_Standard__c), &#39;7&#39;),
CONTAINS(TEXT(B2b_Percentage_Discount_Standard__c), &#39;9&#39;),
CONTAINS(TEXT(B2b_Percentage_Discount_Standard__c), &#39;11&#39;),
CONTAINS(TEXT(B2b_Percentage_Discount_Standard__c), &#39;13&#39;)
)
)
)</errorConditionFormula>
    <errorMessage>Percentage not authorized for class.</errorMessage>
</ValidationRule>