GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/validationRules/B2B_Exclude_values_Comfort.validationRule-meta.xml
<ValidationRule>
    <fullName>B2B_Exclude_values_Comfort</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT($User.B2b_Bypass_Validation_Rules__c),
NOT($Permission.Sales_Admin),
OR(
CONTAINS(TEXT(B2b_Percentage_Discount_Comfort__c), &#39;9&#39;),
CONTAINS(TEXT(B2b_Percentage_Discount_Comfort__c), &#39;11&#39;),
CONTAINS(TEXT(B2b_Percentage_Discount_Comfort__c), &#39;13&#39;)
)
)</errorConditionFormula>
    <errorMessage>Percentage is invalid, it cannot be 1%, 2%, 3%, 4%, 9%, 11%, 13% or more than 20%</errorMessage>
</ValidationRule>