GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/validationRules/B2B_Exclude_values_Standard.validationRule-meta.xml
<ValidationRule>
    <fullName>B2B_Exclude_values_Standard</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT($User.B2b_Bypass_Validation_Rules__c),
NOT($Permission.Sales_Admin),
OR(
CONTAINS(TEXT(B2b_Percentage_Discount_Standard__c), &#39;7&#39;),
CONTAINS(TEXT(B2b_Percentage_Discount_Standard__c), &#39;9&#39;),
CONTAINS(TEXT(B2b_Percentage_Discount_Standard__c), &#39;11&#39;),
CONTAINS(TEXT(B2b_Percentage_Discount_Standard__c), &#39;13&#39;)
)
)</errorConditionFormula>
    <errorMessage>Percentage invalid, it cannot be 1%, 3%, 7%, 9%, 11%, 13% equal or above 23%</errorMessage>
</ValidationRule>