GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/validationRules/B2b_NegotiatedRateStatusRules.validationRule-meta.xml
<ValidationRule>
    <fullName>B2b_NegotiatedRateStatusRules</fullName>
    <active>false</active>
    <description>Users cannot pass from &quot;New&quot; status to &quot;To be approved&quot; or &quot;To be extracted&quot; if the field for the % given (1st, 2nd, 3rd) are not completed and start date too)</description>
    <errorConditionFormula>AND(
NOT($User.B2b_Bypass_Validation_Rules__c),
NOT($Permission.Sales_Admin),
OR(
ISPICKVAL(B2b_Status__c, &#39;To be Approved&#39;),
ISPICKVAL(B2b_Status__c, &#39;To be Extracted&#39;)
),
OR(
ISBLANK(TEXT(B2b_Percentage_Discount_Premium__c)),
ISBLANK(TEXT(B2b_Percentage_Discount_Comfort__c)),
ISBLANK(TEXT(B2b_Percentage_Discount_Standard__c)) )
)</errorConditionFormula>
    <errorMessage>You can&#39;t pass the status to &quot;To be approved&quot; or &quot;To be extracted&quot; if the field for the % given (1st, 2nd, 3rd) are not completed and start date too)</errorMessage>
</ValidationRule>