GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/validationRules/B2b_NeogtiatedRateStatusOrder.validationRule-meta.xml
<ValidationRule>
    <fullName>B2b_NeogtiatedRateStatusOrder</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT($User.B2b_Bypass_Validation_Rules__c),
    ISCHANGED(B2b_Status__c),
    OR(
        AND(
            ISPICKVAL(B2b_Status__c,&#39;Extracted&#39;),
            ISPICKVAL(PRIORVALUE(B2b_Status__c),&#39;Integrated&#39;)
        ),
        AND(
            ISPICKVAL(B2b_Status__c,&#39;Integrated&#39;),
            NOT(ISPICKVAL(PRIORVALUE(B2b_Status__c),&#39;Extracted&#39;))
        ),
        AND(
            ISPICKVAL(B2b_Status__c,&#39;Extracted&#39;),
            NOT(ISPICKVAL(PRIORVALUE(B2b_Status__c),&#39;To be Extracted&#39;))
        ),
        AND(
            ISPICKVAL(B2b_Status__c,&#39;To be Extracted&#39;),
            ISPICKVAL(PRIORVALUE(B2b_Status__c),&#39;Extracted&#39;)
        ),
        AND(
            ISPICKVAL(B2b_Status__c,&#39;To be Extracted&#39;),
            ISPICKVAL(PRIORVALUE(B2b_Status__c),&#39;Integrated&#39;)
        ),
        AND(
            ISPICKVAL(B2b_Status__c,&#39;New&#39;),
            ISPICKVAL(PRIORVALUE(B2b_Status__c),&#39;Extracted&#39;)
        )
    )
)</errorConditionFormula>
    <errorMessage>Please respect the status order</errorMessage>
</ValidationRule>