GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/validationRules/B2b_NRDStartDateRules.validationRule-meta.xml
<ValidationRule>
    <fullName>B2b_NRDStartDateRules</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT($User.B2b_Bypass_Validation_Rules__c),
ContractID__r.AccountId__r.RecordType.DeveloperName = &#39;B2b_ParentCompany&#39;,
OR(
B2b_RoadStartDate__c &lt; ContractID__r.B2b_ContractStartDate__c,
AND(
B2b_RoadStartDate__c &lt; TODAY(),
B2b_RoadStartDate__c &lt; ContractID__r.B2b_FCE__r.B2b_ActivationDate__c,
ISCHANGED(B2b_RoadStartDate__c)
)
)
)</errorConditionFormula>
    <errorMessage>Road Start Date can&#39;t be lower than today and FCE Activation Date
AND
The Road Start Date can&#39;t start before the contract start date</errorMessage>
</ValidationRule>