GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/validationRules/B2b_Prevent_Route_End_Date_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>B2b_Prevent_Route_End_Date_Change</fullName>
    <active>true</active>
    <description>When status is &quot;Rejected&quot; or &quot;To be Approved&quot; the route end date cannot be edited.</description>
    <errorConditionFormula>AND(
NOT($User.B2b_Bypass_Validation_Rules__c),
NOT($Permission.Sales_Admin),
NOT(ISPICKVAL(B2b_Status__c, &quot;New&quot;)),
NOT(ISPICKVAL(B2b_Status__c, &quot;To be Extracted&quot;)),
NOT(ISPICKVAL(B2b_Status__c, &quot;Integrated&quot;)),
NOT(ISPICKVAL(B2b_Status__c, &quot;Extracted&quot;)),
ISCHANGED(B2b_RouteEndDate__c)
)</errorConditionFormula>
    <errorMessage>When status is &quot;Rejected&quot; or &quot;To be Approved&quot; the route end date cannot be edited.</errorMessage>
</ValidationRule>