GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/validationRules/Check_Sales_Admin_Permission.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Sales_Admin_Permission</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 OR(ISPICKVAL( B2b_Status__c , &quot;Extracted&quot;),ISPICKVAL( B2b_Status__c , &quot;Integrated&quot;)) ,
    !$Permission.Sales_Admin,
    OR(
        ISCHANGED(B2b_RouteStartDate__c),
        ISCHANGED(B2b_TicketsComfort__c),
        ISCHANGED(B2b_TicketsFirst__c),
        ISCHANGED(B2b_TicketsStandard__c),
        ISCHANGED(B2b_Percentage_Discount_Comfort__c),
        ISCHANGED(B2b_Percentage_Discount_Premium__c),
        ISCHANGED(B2b_Percentage_Discount_Standard__c),
        ISCHANGED(B2b_PercentageDiscountBp__c),
        ISCHANGED(B2b_PercentageDiscountSp__c)
    )
)</errorConditionFormula>
    <errorMessage>Only users with Sales Admin permission can change these fields</errorMessage>
</ValidationRule>