GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/listViews/Continent_Negotiated_Rates_To_be_Approve.listView-meta.xml
<ListView>
    <fullName>Continent_Negotiated_Rates_To_be_Approve</fullName>
    <columns>B2b_Account__c</columns>
    <columns>NAME</columns>
    <columns>B2b_Route__c</columns>
    <columns>B2b_Status__c</columns>
    <columns>B2b_RouteStartDate__c</columns>
    <columns>B2b_RouteEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>B2b_NrDetails__c.Negotiated_Rate_Continent</value>
    </filters>
    <filters>
        <field>B2b_Status__c</field>
        <operation>equals</operation>
        <value>To be Approved</value>
    </filters>
    <label>Continent Negotiated Rates To be Approve</label>
</ListView>