GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/listViews/London_Negotiated_Rates_To_be_Approved.listView-meta.xml
<ListView>
    <fullName>London_Negotiated_Rates_To_be_Approved</fullName>
    <columns>B2b_Account__c</columns>
    <columns>NAME</columns>
    <columns>B2b_Route__c</columns>
    <columns>B2b_Status__c</columns>
    <columns>B2b_RouteStartDate__c</columns>
    <columns>B2b_RouteEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>B2b_NrDetails__c.Negotiated_Rate_London</value>
    </filters>
    <filters>
        <field>B2b_Status__c</field>
        <operation>equals</operation>
        <value>To be Approved</value>
    </filters>
    <label>London Negotiated Rates To be Approved</label>
</ListView>