GearsetPOC/force-app/main/default/objects/B2b_NrDetails__c/listViews/Negotiated_Rates_London.listView-meta.xml
<ListView>
    <fullName>Negotiated_Rates_London</fullName>
    <columns>B2b_Account__c</columns>
    <columns>NAME</columns>
    <columns>B2b_Route__c</columns>
    <columns>B2b_Status__c</columns>
    <columns>B2b_RouteStartDate__c</columns>
    <columns>B2b_RouteEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>B2b_NrDetails__c.Negotiated_Rate_London</value>
    </filters>
    <label>Negotiated Rates London</label>
</ListView>